added a new file to code

--- a/blocks/_product-details.liquid
+++ b/blocks/_product-details.liquid
@@ -129,6 +129,9 @@
     },
     {
       "type": "product-custom-property"
+    },
+    {
+      "type": "scent-visualization"
     }
   ],
   "tag": null,
@@ -697,16 +700,17 @@
         }
       },
       "block_order": [
-        "text_TMtYp8",
-        "heading_m7KmQQ",
-        "text_GMQR8L",
-        "price_a7krng",
-        "variant_picker_R3rGDr",
-        "buy_buttons_eYQEYi",
-        "group_Q4eVWb",
-        "accordion",
-        "complementary_products"
-      ]
+    "text_TMtYp8",
+    "heading_m7KmQQ",
+    "text_GMQR8L",
+    "price_a7krng",
+    "variant_picker_R3rGDr",
+    "buy_buttons_eYQEYi",
+    "scent-visualization",
+    "group_Q4eVWb",
+    "accordion",
+    "complementary_products"
+  ]
     }
   ]
 }
